[project]
name = "online-gmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "importlib>=1.0.4",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]
